# agibot_g1_description

./: CMakeLists.txt  README.md  package.xml
config/: rviz_config.rviz
launch/: display_robot.launch.py  display_robot_robotiq.launch.py
log/: latest_list
urdf/: G1_omnipicker.urdf
urdf/g1/: g1.xacro  g1_omnipicker.xacro  left_arm.xacro  left_omnipicker.xacro  right_arm.xacro  right_omnipicker.xacro
urdf/g1/meshes/: arm_l_base_link.fbx  arm_l_end_link.fbx  arm_l_link1.fbx  arm_l_link2.fbx  arm_l_link3.fbx  arm_l_link4.fbx  arm_l_link5.fbx  arm_l_link6.fbx  arm_r_base_link.fbx  arm_r_end_link.fbx  arm_r_link1.fbx  arm_r_link2.fbx  arm_r_link3.fbx  arm_r_link4.fbx  arm_r_link5.fbx  arm_r_link6.fbx  body_link1.fbx  body_link2.fbx  gripper_base_link.fbx  gripper_l_center_link.fbx  gripper_r_base_link.fbx  head_link1.fbx  head_link2.fbx  inner_link1.fbx  inner_link2.fbx  inner_link3.fbx  inner_link4.fbx  outer_link1.fbx  outer_link2.fbx  outer_link3.fbx  outer_link4.fbx
urdf/robotiq/: robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro  robotiq_85_gripper.xacro  robotiq_85_gripper2.xacro
